# BLauncher

./: .gitignore  BLauncher.pro  BLauncher.rc  README.md  gui_extra.py  gui_extra.ui  gui_main.cpp  gui_main.py  gui_main.ui  launcher.cpp  launcher.py  launcher.ui  meson.build  meson_options.txt  theme.ini  toastify.cpp  toastify.py  tostify.py  ui-to-py.bat
assets/: Fix_SVC.reg
gui/: main.ui
libs/: nini.hpp  wintoast.hpp
src/: cmd.cpp  colors.cpp  main.cpp  nini.cpp  notify.cpp  print.cpp  sleep.cpp  str2color.cpp  time.hpp
themes/: Gray Orange.blt  Lavender.blt  Midnight Blue.blt  Red Magic.blt
